# mailing-list

./: .gitignore  Cargo.toml  README.md  members.toml  shell.nix  test.toml
src/: cli.rs  client_handler.rs  config.rs  error.rs  io.rs  mail.rs  main.rs  members.rs  plugins.rs  send_mail.rs  stream.rs
src/client_handler/states/: connected.rs  from.rs  idle.rs  mod.rs  recieving.rs
