[package]
name = "mailing-list"
readme = "README.md"
repository = "https://github.com/Ung-Data-Falun/mailing-list"
homepage = "https://github.com/Ung-Data-Falun/mailing-list"
license = "GPL-3.0"
description = "SMTP server with TOML configuration and dynamic plugin system"
version = "0.3.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
rustls = "0.23.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-rustls = "0.26.0"
toml = "0.8.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
trust-dns-resolver = "0.23.2"
webpki-roots = "0.26.1"
mlpa = "0.4.0"
